# adeptus

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
charts/adeptus/: Chart.yaml  values.yaml
charts/adeptus/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  pvc.yaml  secret.yaml  service.yaml
config/: default.toml
migrations/: 001_initial_setup.sql  002_create_document_categories.sql  003_create_documents.sql  004_create_document_revisions.sql  005_create_document_relationships.sql  006_create_document_files.sql  007_create_glossary_categories.sql  008_create_glossary_entries.sql  009_create_glossary_relationships.sql  010_create_audit_logs.sql
src/: config.rs  error.rs  events.rs  keto.rs  lib.rs  main.rs  models.rs  observability.rs  pactum_client.rs  platform_events.rs  types.rs
src/assets/: pdf_styles.css
src/db/: mod.rs  models.rs
src/db/repositories/: audit.rs  document.rs  document_category.rs  document_file.rs  document_relationship.rs  document_revision.rs  glossary_category.rs  glossary_entry.rs  glossary_relationship.rs  mod.rs
src/graphql/: mod.rs  mutation.rs  query.rs
src/handlers/: file.rs  health.rs  mod.rs  pdf.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs
