[package]
name = "adeptus"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "adeptus"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full"] }

# Web framework
axum = { version = "0.8", features = ["macros", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "timeout"] }

# GraphQL
async-graphql = { version = "7.2", features = ["chrono", "uuid"] }
async-graphql-axum = "7.2"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "migrate"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Event streaming
async-nats = "0.40"

# Rate limiting
governor = "0.10"

# Observability
opentelemetry = "0.28"
opentelemetry_sdk = { version = "0.28", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.28", features = ["grpc-tonic", "trace"] }
opentelemetry-prometheus = "0.28"
tracing-opentelemetry = "0.29"
prometheus = "0.13"

# HTTP client (for Keto + Pactum)
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "multipart"] }

# PDF generation
tempfile = "3.0"

# File handling
mime = "0.3"
mime_guess = "2.0"

# Text processing
regex = "1.0"
html-escape = "0.2"
base64 = "0.22"

# Async utilities
futures = "0.3"

# Utilities
uuid = { version = "1.20", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
config = "0.15"
async-trait = "0.1"
dotenvy = "0.15"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
